2009-06-25  Martin Leidig  <mleidig@schlund.de>

	Fixed HTTP caching header problem: adding custom HTTP headers using
	SPDocument.addResponseHeader caused that the "Cache-Control" and
	"Expires" headers weren't set. Now these headers are always set if
	they were not overridden by the application.

2009-05-29  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.12.4 

2009-05-27  Martin Leidig  <mleidig@schlund.de>

	Added RenderOutputListener support (output creation notification, 
	e.g. can be used for external content analysis). A listener has 
	to implement the according interface and can be configured using 
	a global property:
	<prop name="de.schlund.pfixxml.RenderOutputListener">mypackage.MyListener</prop>

2009-05-18  Martin Leidig  <mleidig@schlund.de>

	Added support for deferring image includes until runtime by setting
	the <pfx:image> or <pfx:xinp type="image"> element's 'level' attribute
	to 'runtime'. The 'src', 'themed-path', 'themed-img' and 'alt' values
	can be lately bound using the according <pfx:src>, <pfx:themed-path>,
	<pfx:themed-img> and <pfx:alt> elements, which are evaluated at
	runtime.

2009-05-13  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT stylesheet compilation error handling: Remember
	TransformerExceptions and add them as TransformerConfigurationException
	cause to reflect the real problem and not just display the pretty vacant 
	'Failed to compile stylesheet' message.

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed problem in TargetGenerator occurring when modtime-check is
	disabled, but targets aren't pre-built (URI problem when trying to
	load module resources from file system).

2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl
	* src/de/schlund/pfixxml/DerefServlet.java

2009-03-31  Andreas Kurth

	* skel/build-skel.xml: extractModules#chmod can cope with very long
	argument lists now.
